--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -1,7 +1,19 @@
-
 {% extends 'todo/base.html' %}
 {% block content %}
 
 Current
+
+<ul>
+    {% for todo in todos %}
+    <li>
+        <a href="{% url 'viewtodo' todo.id %}">
+        {% if todo.important %}<b>{% endif %} {{ todo.title }}
+        {% if todo.important %}</b>{% endif %}
+        </a>
+        {% if todo.memo %} - {{ todo.memo }}{% endif %}
+
+    </li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
