--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -11,6 +11,10 @@
 
 Logged In as {{ user.username }}
 
+<a href="{% url 'createtodo' %}"> Create </a>
+<a href="{% url 'currenttodos' %}"> Curent </a>
+<a href="{% url 'completedtodos' %}"> Completed </a>
+
 <form action="{% url 'logoutuser' %}" method="POST">
 {% csrf_token %}
 <button type="submit">Logout</button>
